<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.church.lst">

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add"
        android:orderInCategory="100"
        android:title="@string/action_add"
        myapp:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/lupa"
        android:orderInCategory="100"
        android:title="@string/action_search"
        myapp:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings2"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        myapp:showAsAction="never" />
</menu>